[package]
name = "entrust-cuda-rs"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1.1"
rustacuda_core = "0.1.1"
rustacuda_derive = "0.1.1"
indicatif = "0.13.0"
nvml-wrapper = "0.5.0"
crossbeam-utils = "0.7.0"
crossbeam-queue = "0.2.1"
crossbeam = "0.7.3"
console = "0.9.2"
structopt = "0.3.8"
url = "2.1.1"
regex = { version = "1.3.3", default_features = false, features = ["std"] }
base64 = "0.11.0"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
hex = "0.4.0"
